<resources>

    <string name="port">10001</string>

    <string name="app_name">ALocMess</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="map_radius">Radius</string>
    <string name="title_activity_gps_location_picker">GPS Location Picker</string>
    <string name="title_activity_maps">Map</string>
    <string name="main_no_messages">No Messages To Show</string>
    <string name="title_rationale_dialog">Location access denied</string>
    <string name="message_rationale_dialog">LocMess must have location access to work.
        You must allow it to continue.</string>
    <string name="positive_rationale_dialog">App Settings</string>
    <string name="negative_rationale_dialog">Exit</string>
    <string name="activity_name_gps_location">GPS</string>
    <string name="accept">Accept</string>
    <string name="create_location_wifi">Wi-Fi</string>
    <string name="create_location_gps">GPS</string>
    <string name="toast_login_error">Login Error</string>


    <!--<string name="webserver_url">https://alkuentrus.ovh:8080/locmess</string>-->
    <!--string name="webserver_url">https://192.168.56.1:8080/locmess</string-->
    <!--<string name="webserver_url">http://192.168.1.75:8080/locmess</string>-->

    <string name="webserver_url">https://192.168.1.64:8080/locmess</string>

    <string name="content_type_json">application/json</string>
    <string name="token_header">X-Token</string>

    <!-- user endpoints -->
    <string name="webserver_endpoint_user_signup">/user/signup</string>
    <string name="webserver_endpoint_user_login">/user/login</string>
    <string name="webserver_endpoint_user_logout">/user/logout</string>
    <string name="webserver_endpoint_user_listpairs">/user/listpairs</string>
    <string name="webserver_endpoint_user_addpair">/user/addpair</string>
    <string name="webserver_endpoint_user_removepair">/user/removepair</string>
    <!-- location endpoints -->
    <string name="webserver_endpoint_location_create">/location/create</string>
    <string name="webserver_endpoint_location_remove">/location/remove</string>
    <string name="webserver_endpoint_location_list">/location/list</string>
    <!-- message endpoints -->
    <string name="webserver_endpoint_message_post">/message/post</string>
    <string name="webserver_endpoint_message_unpost">/message/unpost</string>
    <string name="webserver_endpoint_message_list">/message/list</string>

    <!-- misc endpoints -->
    <string name="webserver_endpoint_misc_listpairs">/misc/listPairs</string>

    <string name="toast_error_last_known_location">Impossible to get your last location.</string>
    <string name="notification_title">You have a new result!</string>
    <string name="notification_text">Click here to retrieve it and read it!</string>
    <string name="auto_login">Auto Login</string>
    <string name="login">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="dialog_login">Logging. Please wait…</string>
    <string name="dialog_create_account">Creating account…</string>
    <string name="register_hint_username">Username</string>
    <string name="register_hint_password">Password</string>
    <string name="register_hint_repeat_password">Repeat Password</string>
    <string name="button_register">Register</string>
    <string name="dialog_retrieve_profile">Retrieving profile…</string>
    <string name="dialog_message_add_gps_location">Adding Location…</string>

    <string name="multispinner_placeholder">Select Keys</string>


    <!-- location endpoints -->
    <string name="webserver_endpoint_hearthbeat">/actions/heartbeat</string>

    <!-- status codes locmess -->
    <string name="LM_0">LM_0</string>
    <string name="LM_1">LM_1</string>
    <string name="LM_2">LM_2</string>
    <string name="radio_backlist">B</string>
    <string name="radio_whitelist">W</string>
    <string name="Send_Message">Post</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="credentials_filename">credentials.dat</string>
    <string name="cached_message_filename">cachedmessages.dat</string>
    <string name="no_locations_to_show">No Locations To Show!</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="gps_location_empty">Name is empty.</string>
    <string name="error_logout">Can\'t logout</string>
    <string name="dialog_locations">Getting locations...</string>

</resources>
