<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:weightSum="1">

        <EditText
            android:id="@+id/User"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:hint="@string/register_hint_username"
            android:inputType="text"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:hint="@string/register_hint_password"
            android:inputType="textPassword"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/RepeatPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:hint="@string/register_hint_repeat_password"
            android:inputType="textPassword"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/MaxSizeMessages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:hint="Number Of Messages To Carry"
            android:inputType="text"
            android:textSize="25sp"
            android:layout_weight="0.08" />

        <Button
            android:id="@+id/Register"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:onClick="register"
            android:text="@string/button_register"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>