<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/nm_layout"
        android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:weightSum="1">

        <EditText
            android:id="@+id/msgtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Title"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="Message Content"
            android:inputType="textMultiLine"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Location:"
            android:textColor="@color/title"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0.05" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Begin Date:"
            android:textColor="@color/title"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/BeginTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:gravity="center"
                android:onClick="showTimePickerDialog"
                android:text="@string/select_time"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/BeginDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:gravity="center"
                android:onClick="showDatePickerDialog"
                android:text="@string/select_date"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="End Date:"
            android:textColor="@color/title"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EndTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:gravity="center"
                android:onClick="showTimePickerDialog"
                android:text="Select Time"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/EndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:gravity="center"
                android:onClick="showDatePickerDialog"
                android:text="Select Date"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Pairs:"
            android:textColor="@color/title"
            android:textSize="20sp" />

        <com.thomashaertel.widget.MultiSpinner
            android:id="@+id/spinnerMulti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0.05" />

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_whitelist" />

            <RadioButton
                android:id="@+id/radioB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_backlist" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/SendMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioCentralized"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Centralized" />

            <RadioButton
                android:id="@+id/radioDescentralized"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Descentralized" />

        </RadioGroup>

        <Button
            android:id="@+id/Send_Message"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="0.04"
            android:onClick="sendMessage"
            android:text="@string/Send_Message"
            android:textSize="20sp" />

    </LinearLayout>
</RelativeLayout>
</ScrollView>